# hello_chat_rust

./: Cargo.toml  psql-al-vbox.txt  start_db.sh
src/: main.rs
src/db/: data.rs  mod.rs  sql.rs  token.rs  user.rs
src/routes/: auth_user.rs  create_user.rs  errors.rs  jwt.rs  logout.rs  mod.rs  refresh_token.rs
