[package]
name = "hellochatrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
tokio = { version = "1.21.2",  features = ["full"]}
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "time"] }
sha256 = "1.1.1"
regex = "1.6.0"
jsonwebtoken = "8.1.1"
rand = "0.8.5"